--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>71944f0e-d9d5-42ad-b5e7-1b7aa0a89f1a</UserSecretsId>
   </PropertyGroup>
 
 	<ItemGroup>
