Добавил представление ТОП сотрудников по расходам за последний год; Дополнил модель сотрудников; Внес правки по предыдущему ПРу (ренейм методов, замена классов Сотрудников); Мелкие правки

--- a/TimeSheet.Web/appsettings.json
+++ b/TimeSheet.Web/appsettings.json
@@ -11,6 +11,7 @@
   "AllowedHosts": "*",
   "TableSettings": {
     "PageSize": 4,
-    "TopScope": 3
+    "TopScopes": 5,
+    "TopEmployees": 3
   }
 }
