Добавил кеширование данных с таймером хранения из конфига
1. Добавил кеширование
2. Добавил конфиг с параметром секунд хранения данных и выбора АПИ хоста
3. Добавил модели во view Сотрудников и Скоупов для отображения сущностей, текущей даты и даты последнего кеша
4. Добавил новый АПИ хост BlockchainInfoHttpClient
5. Зарегистрировал IBitcoinHttpClientService и кеш
6. Применил паттерн проектирования - Фабричный метод - в работе с разными АПИ хостами
7. В сущности RatesDto добавил параметр update_at
8. Создал сущность отображения данных кеша CacheDateTimeDto
9. Внес правку в словосочетании TimeSheetSavingDto

--- a/TimeSheet.Web/appsettings.json
+++ b/TimeSheet.Web/appsettings.json
@@ -13,5 +13,9 @@
     "PageSize": 4,
     "TopScopes": 5,
     "TopEmployees": 3
+  },
+  "CacheSettings": {
+    "SecondsHoldCache": 10,
+    "ApiHostName": "CoinDesk"
   }
 }
