Реализация аутентификацию и авторизацию
Уровень TimeSheet.Web:
1. Добавил в конструктор AccountController входящий параметр типа SignInManager<Employee> для работы с авторизацией
2. Добавил в конструктор AccountController входящий параметр типа IOptions<CookieSettings> для настройки схемы куки
3. Изменил название переменной в сигнатуре метода [HttpPost]Login c user на login
4. Добавил обработку null для параметров экземпляра login метода [HttpPost]Login
5. Реализовал аутентификацию через signInManager.PasswordSignInAsync
6. Зарегистрировал настройки InitialUsersSettings и CookieSettings в конфиге
7. В файле Program.cs на старте приложения реализовал Реинициализацию созданных раннее в бд пользователей. Флаг NeedReInitialUsers настроек InitialUsersSettings конфига отвечает за выполнение/невыполнение данной реализации

Уровень Services:
1. Создал класс ReInitialUsersService с методом ReInitializeUsers. Теперь раннее инициированные пользователи имеют SecurityStamp, логины и пароли
2. В методе ReInitializeUsers timeSheets копируются, затем после реинициализации добавляются - такое решение было реализовано в связи с тем, что SQLite не предоставляет возможность снимать ForeingKey с EmployeeId сущности TimeSheet, а удалять сотрудников обязательно, чтобы их зарегистрировать с паролями
3. Добавлены классы настроек InitialUsersSettings и CookieSettings

Изменения по всем проектам:
1. Добавил в конфиг настройки InitialUsersSettings и CookieSettings
2. Заменил CookieAuthenticationDefaults.AuthenticationScheme на tableSettings.AuthenticationScheme класса CookieSettings, использующий значения конфига

--- a/TimeSheet.Web/appsettings.json
+++ b/TimeSheet.Web/appsettings.json
@@ -17,5 +17,11 @@
   "CacheSettings": {
     "SecondsHoldCache": 10,
     "ApiHostName": "CoinDesk"
+  },
+  "InitialUsersSettings": {
+    "NeedReInitialUsers": true
+  },
+  "CookieSettings": {
+    "AuthenticationScheme": "Identity.Application"
   }
 }
