Удалил InitialUsersSettings, теперь флаг InitialUsersSettings берется напрямую по ключу

--- a/TimeSheet.Web/appsettings.json
+++ b/TimeSheet.Web/appsettings.json
@@ -18,9 +18,7 @@
     "SecondsHoldCache": 10,
     "ApiHostName": "CoinDesk"
   },
-  "InitialUsersSettings": {
-    "NeedReInitialUsers": true
-  },
+  "NeedReInitialUsers": true,
   "CookieSettings": {
     "AuthenticationScheme": "Identity.Application"
   }
