--- a/TimeSheet.Web/appsettings.json
+++ b/TimeSheet.Web/appsettings.json
@@ -19,6 +19,10 @@
     "ApiHostName": "CoinDesk"
   },
   "NeedReInitialUsers": true,
+  "BaseUserCredis": {
+    "Login": "Login",
+    "Password": "Pass1!"
+  },
   "CookieSettings": {
     "AuthenticationScheme": "Identity.Application"
   }
