Добавил библиотеку Microsoft.AspNetCore.Mvc.Core

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
