Реализовал доступы соответственно ролям
1. Теперь юзерам отображаются страницы и юзеры имеют доступы не по признаку роли, а по тому, какие доступы роль имеет
2. Роли определяются из конфига
3. Добавил класс PermissionsConstant для определения типа claims
4. Теперь в классе RoleService метод GetRolesNameByUserId возвращает не названия ролей, а роли целиком (без юзеров)
5. Теперь в классе AccountController в методе Login в claims добавляются на названия ролей, а названия доступов
6. атрибуты Authorize заменил на кастомный атрибут Access

+ исправил баг с созданием файла для базы

--- a/TimeSheet.Web/appsettings.json
+++ b/TimeSheet.Web/appsettings.json
@@ -22,5 +22,13 @@
   "BaseUserCredis": {
     "Login": "Login",
     "Password": "Pass1!"
+  },
+  "Permissions": {
+    "RolesPermissions": {
+      "1": [ "AddTimeSheet" ],
+      "2": [ "ViewEmployees" ],
+      "3": [ "AddTimeSheet", "ViewScopes", "ViewRates" ],
+      "4": [ "AddTimeSheet", "ViewScopes", "ViewRates", "ImportCurrencies", "EditUser" ]
+    }
   }
 }
